# rlframework

./: .gitignore  MULTI_PROJECT_GUIDE.md  Makefile  PROJECTS_AFTER_PYPI.md  README.md  pyproject.toml
docs/: Checkpointing_Flow.puml  EpisodeReplayBuffer_deque_block_reuse.md  EpisodeReplayBuffer_performance_analysis.md  EpisodeReplayBuffer_sample_optimization.md  FastSampleEpisodeReplayBuffer_numpy_indices.md  Python_deque_principles.md  ReplayBuffer_memory_profiling.md  SAC_training_sync_async_analysis.md  async_env_sampling_metrics.md  async_sac_pipeline_modes_plan.md  async_sac_train_credit_analysis.md  component_registry_composite_catalog.puml  framework_run_layout_design.md  replay_buffer_snapshot_async_design.md  rlframework_architecture.puml  rlframework_layered_overview.puml  rlframework_team_tech_share.md  rllib_sac_action_flow.md  sac_trainner_optimization.md
docs/plantuml/: BatchEvictEpisodeReplayBuffer_Add.puml  CustomRLModule_Dependencies.puml  CustomReplayBuffer_Integration.puml  EnvModule_Architecture.puml  EpisodeReplayBuffer.puml  EpisodeReplayBuffer_Add.puml  EpisodeReplayBuffer_Sample.puml  EpisodeReplayBuffer_Sample2.puml  Reporters_Callback_Flow.puml
docs/superpowers/plans/: 2026-07-22-replay-buffer-eviction-release-diagnostics.md
docs/superpowers/specs/: 2026-07-22-replay-buffer-eviction-release-diagnostics-design.md
examples/: 01_ppo_cartpole.py  02_sac_pendulum.py  03_custom_algorithm.py  04_full_production.py  05_custom_model_composition.py  06_custom_eval_metrics.py  06_custom_rl_module.py  07_lr_schedule.py  08_async_sac_pendulum_resume_eval.py  09_custom_replay_buffer.py  10_batch_evict_episode_replay_buffer.py  11_minio_model_saving.py  12_grafana_metrics.py  13_custom_env.py  13_supervised_bc.py  README.md  __init__.py
rlframework/: __init__.py  logging_config.py
rlframework/algorithms/: __init__.py  async_sac.py  base.py  ppo.py  sac.py
rlframework/algorithms/supervised/: __init__.py  base.py  bc.py  data_utils.py  losses.py  marwil.py
rlframework/callbacks/: __init__.py  framework_callback.py
rlframework/config/: __init__.py  framework_config.py  validators.py
rlframework/envs/: __init__.py  base_env.py  remote_env.py
rlframework/envs/wrappers/: __init__.py
rlframework/logging/: __init__.py  callbacks.py  logger_creator.py
rlframework/logging/reporters/: __init__.py
rlframework/models/: __init__.py  catalog.py  rl_module.py
rlframework/models/components/: __init__.py
rlframework/observability/: __init__.py
rlframework/observability/reporters/: __init__.py
rlframework/storage/: __init__.py  checkpoint_manager.py  model_manager.py  model_store.py
rlframework/storage/backends/: __init__.py
rlframework/utils/: __init__.py  data_utils.py  exceptions.py  replay_buffers.py  torch_utils.py
tests/: conftest.py  test_algorithms.py  test_async_sac_pipeline.py  test_async_sac_ray_async.py  test_env_wrappers.py  test_logging.py  test_logging_config.py  test_storage.py  test_utils.py
