[project]
name = "rlframework"
version = "0.1.0"
description = "Company-level RL framework built on top of RLlib"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Your Team" }]

dependencies = [
    "ray[rllib]>=2.49.2",
    "torch>=2.2.0,<2.3.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.4.1,<2.5.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0,<2.0.0; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy>=2.0.0,<3.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
minio = ["minio>=7.2.0"]
s3 = ["boto3>=1.34.0"]
influxdb = []          # uses stdlib http.client / requests (already in deps)
prometheus = ["prometheus-client>=0.20.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
]
all = [
    "minio>=7.2.0",
    "boto3>=1.34.0",
    "prometheus-client>=0.20.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
]

[project.scripts]
rlframework = "rlframework.__main__:main"

# ---------------------------------------------------------------------------
# Build system — setuptools (works with all pip versions including editable)
# ---------------------------------------------------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Standard project layout: pyproject.toml at project root
# Packages discovered automatically

[tool.setuptools.packages.find]
where = ["."]
include = ["rlframework*"]

# ---------------------------------------------------------------------------
# uv settings (optional)
# ---------------------------------------------------------------------------
[tool.uv]
environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'", "sys_platform == 'linux' and platform_machine == 'x86_64'"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --import-mode=importlib --cov=rlframework --cov-report=term-missing"
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# ---------------------------------------------------------------------------
# ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["rlframework", "tests"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "dist",
    "build",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in default arguments
    "B024",    # abstract base class without abstract methods
    "N812",    # lowercase imported as non-lowercase (common in torch)
    "RUF002",  # en-dash in docstrings -- intentional typographic style
    "RUF003",  # en-dash in comments -- intentional typographic style
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["N999"]   # numeric-prefixed example file names are intentional
"tests/*.py"    = ["N999", "S101"]  # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["rlframework"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_optional = true
show_error_codes = true
exclude = [
    "tests/",
    "examples/",
    "build/",
]
